--- a/src/index.scss
+++ b/src/index.scss
@@ -47,6 +47,12 @@ ion-icon {
     background-color: #e10000;
     color: #ffffff;
   }
+
+  &-secondary{
+    float: right;
+    background: #000;
+    color: #fff;
+  }
 }
 
 .badge {
@@ -95,6 +101,7 @@ ion-icon {
 }
 
 input {
+  width: 100%;
   font-size: 2rem;
   padding: 1rem;
   min-height: 4rem;
