--- a/src/layout/header/index.scss
+++ b/src/layout/header/index.scss
@@ -24,8 +24,11 @@ header {
 }
 
 .menu {
+  display: flex;
   font-size: 1.5rem;
-  margin: 0 4rem;
+  margin: 0 2rem;
+  flex: 1;
+  cursor: pointer;
 
   &-active {
     color: #e10000;
@@ -36,6 +39,7 @@ header {
   .logo {
     min-height: 4.5rem;
     font-size: 1.2rem;
+    padding-top: 1rem;
   }
   .menu {
     display: none;
